固定ページ作成

--- a/style.css
+++ b/style.css
@@ -26,3 +26,4 @@ with others.
 @import url("css/reset.css");
 @import url("css/common.css");
 @import url("css/index.css");
+@import url("css/profile.css");
