--- a/css/common.css
+++ b/css/common.css
@@ -4,6 +4,10 @@
 -----------------------------------*/
 body {
   background-color: #2e3133;
+  color: #D9D9D9;
+  font-size: 16px;
+  font-family: "BIZ UDPGothic";
+  line-height: 1.3;
 }
 
 header {
