--- a/scss/common.scss
+++ b/scss/common.scss
@@ -6,6 +6,10 @@
 
 body {
   background-color: $black ;
+  color: $white ;
+  font-size: 16px ;
+  font-family:"BIZ UDPGothic";
+  line-height: 1.3 ;
 }
 header{
   float: left ;
