--- a/css/index.css
+++ b/css/index.css
@@ -11,8 +11,15 @@ main ul.music_list {
     grid-template-columns: 1fr;
   }
 }
+main ul.music_list li {
+  aspect-ratio: 16/9;
+}
 @media screen and (max-width: 768px) {
   main ul.music_list li {
     max-width: 100%;
   }
+}
+main ul.music_list li iframe {
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=index.css.map */
