--- a/css/profile.css
+++ b/css/profile.css
@@ -11,5 +11,36 @@ main#profile h2 {
   font-size: 30px;
   padding: 0 0 8px 0;
   margin: 0 0 16px 0;
+}
+main#profile h2 span {
   border-bottom: 1px solid #D9D9D9;
+  position: relative;
+  padding: 5px 10px 5px 5px;
+}
+main#profile h2 span:before {
+  content: "";
+  display: block;
+  border-right: 1px solid #D9D9D9;
+  height: 31px;
+  transform: rotate(45deg);
+  position: absolute;
+  right: -11px;
+  bottom: -5px;
+}
+main#profile h2 span:after {
+  content: "";
+  display: block;
+  border-bottom: 1px solid #D9D9D9;
+  width: 100%;
+  position: absolute;
+  left: 19px;
+  bottom: -5px;
+}
+main#profile h3 {
+  font-family: "Big Shoulders Text", cursive;
+  font-weight: 100;
+  font-size: 24px;
+}
+main#profile p {
+  margin-bottom: 20px;
 }/*# sourceMappingURL=profile.css.map */
