プロフィールスタイル修正

--- a/css/profile.css
+++ b/css/profile.css
@@ -11,5 +11,33 @@ main#profile h2 {
   font-size: 30px;
   padding: 0 0 8px 0;
   margin: 0 0 16px 0;
+}
+main#profile h2 span {
   border-bottom: 1px solid #D9D9D9;
+  padding: 0 10px 0 0;
+  position: relative;
+}
+main#profile h2 span:before {
+  content: "";
+  display: block;
+  border-right: 1px solid #D9D9D9;
+  height: 19px;
+  transform: rotate(45deg);
+  position: absolute;
+  right: -6px;
+  bottom: -4px;
+}
+main#profile h2 span:after {
+  content: "";
+  display: block;
+  border-bottom: 1px solid #D9D9D9;
+  width: 55px;
+  position: absolute;
+  right: -22px;
+  bottom: -4px;
+}
+main#profile h3 {
+  font-family: "Big Shoulders Text", cursive;
+  font-weight: 100;
+  font-size: 24px;
 }/*# sourceMappingURL=profile.css.map */
