--- a/scss/profile.scss
+++ b/scss/profile.scss
@@ -13,6 +13,34 @@ main#profile{
     font-size:30px;
     padding: 0 0 8px 0 ;
     margin: 0 0 16px 0 ;
-    border-bottom: 1px solid $white ;
+    span{
+      border-bottom: 1px solid $white ;
+      padding: 0 10px 0 0 ;
+      position:relative;
+      &:before{
+        content: "";
+        display: block;
+        border-right: 1px solid #D9D9D9;
+        height: 19px;
+        transform: rotate(45deg);
+        position: absolute;
+        right: -6px;
+        bottom: -4px;
+      }
+        &:after{
+        content: "";
+        display: block;
+        border-bottom: 1px solid #D9D9D9;
+        width: 55px;
+        position: absolute;
+        right: -22px;
+        bottom: -4px;
+      }
+    }
+  }
+  h3{
+    font-family: 'Big Shoulders Text', cursive;
+    font-weight: 100 ;
+    font-size:24px;
   }
 }
