--- a/scss/index.scss
+++ b/scss/index.scss
@@ -12,8 +12,16 @@ main{
       grid-template-columns: 1fr ;
     }
     li{
+      iframe {
+        aspect-ratio: 16 / 9;
+      }
       @media screen and (max-width:768px) {
         max-width: 100%;
+        iframe{
+        &::-webkit-scrollbar{
+          display: none ;
+        }
+        }
       }
     }
   }
