--- a/scss/common.scss
+++ b/scss/common.scss
@@ -35,7 +35,7 @@ nav#gnav{
   font-weight: 100 ;
   font-size:30px;
   width: 300px ;
-  height: 100vh ; 
+  height: 100vh ;
   padding: 20px ;
   @media screen and (max-width:768px) {
     float: none ;
@@ -50,7 +50,9 @@ nav#gnav{
     a{
       text-decoration: none ;
       color: $white ;
-      display: block ;
+      display: flex;
+      justify-content: left ;
+      align-items: center;
     }
     li{ 
       margin-bottom: 20px ;
