--- a/scss/index.scss
+++ b/scss/index.scss
@@ -2,14 +2,37 @@
 @import "function.scss";
 
 main{
-  ul.music_list{
+  ul.movie_list{
     display: grid ;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     column-gap: 10px;
     row-gap: 10px;
     padding:10px;
     @media screen and (max-width:768px) {
       grid-template-columns: 1fr ;
+    }
+    li{
+      iframe {
+        aspect-ratio: 16 / 9;
+      }
+      @media screen and (max-width:768px) {
+        max-width: 100%;
+        iframe{
+        &::-webkit-scrollbar{
+          display: none ;
+        }
+        }
+      }
+    }
+  }
+  ul.music_list{
+    display: grid ;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 10px;
+    row-gap: 10px;
+    padding:10px;
+    @media screen and (max-width:768px) {
+      grid-template-columns: repeat(2,1fr) ;
     }
     li{
       iframe {
