--- a/style.css
+++ b/style.css
@@ -27,3 +27,4 @@ with others.
 @import url("css/common.css");
 @import url("css/index.css");
 @import url("css/profile.css");
+@import url("css/works.css");
