--- a/scss/_function.scss
+++ b/scss/_function.scss
@@ -14,7 +14,7 @@
 //*config*/
 // @import "_config/mediaquery";
 // @import "_config/bg-color";
-// @import "_config/font";
+@import "_config/font";
 @import "_config/color";
 // @import "_config/layout";
 // @import "_config/animation-act";
