--- a/scss/common.scss
+++ b/scss/common.scss
@@ -1,5 +1,6 @@
 /*--------------------------------------
 	copyright : nowone
+  2024/1/19
 -----------------------------------*/
 //import scss
 @import "function.scss";
