--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /*--------------------------------------
 	copyright : nowone
+  2024/1/19
 -----------------------------------*/
 body {
   background-color: #2e3133;
