--- a/scss/_config/_font.scss
+++ b/scss/_config/_font.scss
@@ -22,3 +22,26 @@ $L-height: 1.6em ;
     @import url(https://fonts.googleapis.com/earlyaccess/notosansjp.css);
 }
 $basefont: "Noto Sans JP",thin,"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+
+//=======================================
+//
+//	font-size basic setting config
+//
+//=======================================
+
+// @mixin font-size($size: 24, $base: 16) {
+// 	font-size: $size + px;
+// 	font-size: ($size / $base) * 1rem;
+// }
+
+@mixin font-size-xs($xs:12) {
+    font-size: $xs + px;
+}
+
+@mixin font-sizec-md( $md : 16 ){
+    font-size: $md + px;
+}
+
+@mixin font-size-lg( $lg : 20 ){
+    font-size: $base + px;
+}
