--- a/css/works.css
+++ b/css/works.css
@@ -1,6 +1,5 @@
 /* single-works.php ----------*/
 body {
-  background-size: 100%;
   background: url(../images/works/bg_works_top.jpg) no-repeat top center;
   background-position: center top;
   background-repeat: no-repeat;
@@ -64,7 +63,7 @@ body section#contents ul.works_detail {
   display: flex;
 }
 body section#contents ul.works_detail li {
-  font-size: 12px;
+  font-size: 16px;
   vertical-align: top;
 }
 body section#contents ul.works_detail li.works_main_img {
@@ -81,12 +80,12 @@ body section#contents ul.works_detail li.works_info .date {
   margin: 0 0 5px;
 }
 body section#contents ul.works_detail li.works_info h1 {
-  font-size: 30px;
+  font-size: 30;
   margin: 0 0 30px;
   line-height: 1.1;
 }
 body section#contents ul.works_detail li dl dt {
-  font-size: 23px;
+  font-size: 23;
   text-align: left;
   font-weight: 350;
   margin: 0 0 10px;
@@ -134,7 +133,7 @@ body section#contents ul.works_photos {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  font-size: 18px;
+  font-size: 18;
 }
 body section#contents ul.works_photos li {
   width: 25vw;
