--- a/scss/_config/_font.scss
+++ b/scss/_config/_font.scss
@@ -34,11 +34,15 @@ $basefont: "Noto Sans JP",thin,"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothi
 // 	font-size: ($size / $base) * 1rem;
 // }
 
+@mixin font-size($free) {
+    font-size: $free ;
+}
+
 @mixin font-size-xs($xs:12) {
     font-size: $xs + px;
 }
 
-@mixin font-sizec-md( $md : 16 ){
+@mixin font-size-md( $md : 16 ){
     font-size: $md + px;
 }
 
