--- a/scss/works.scss
+++ b/scss/works.scss
@@ -8,16 +8,17 @@
 
 // @mixin LAYOUT-WORKS{
 body{
-    background: url(../images/works/bg_works_top.jpg) no-repeat top center;
+    // background: url(../images/works/bg_works_top.jpg) no-repeat top center;
     background-position: center top;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    background-color: #2e3133;
     ul.works_list{
         display: flex ;
         justify-content: center ;
         flex-wrap: wrap ;
-        width: 86% ;
+        width: 100% ;
         margin: 0 auto ;
         li{
             margin: 0 20px 20px 0 ;
@@ -26,7 +27,7 @@ body{
             text-align: center ;
             transition: .3s ;
             width: 25vw;
-            max-width: 350px ;
+            max-width: 375px ;
             .img_wrap{
                 overflow: hidden ;
             }
