--- a/scss/_config/_color.scss
+++ b/scss/_config/_color.scss
@@ -9,13 +9,14 @@ $black:#2e3133;
 $black-l:#4A4A4A;
 $white:#D9D9D9;
 $text:#D9D9D9;
-
 $Red: #ce3955 ;
 $Yellow:#d8ab54;
 $Blue:#26b7bc;
 $Works-title: #000 ;
 $link-color: #26b7bc ;
 
+//blackに対する白背景
+$bg-w: rgba(255,255,255,0.7) ;
 
 
 //ブレイクポイント設定
