--- a/scss/_function.scss
+++ b/scss/_function.scss
@@ -16,12 +16,13 @@
 // @import "_config/bg-color";
 @import "_config/font";
 @import "_config/color";
+@import "_config/parts-config";
 // @import "_config/layout";
 // @import "_config/animation-act";
 // @import "_config/btn-parts";
 // @import "_config/title-parts";
 // @import "_config/hover";
-
+@import "_config/plugin";
 
 
 //ブレイクポイント設定
