--- a/css/reset.css
+++ b/css/reset.css
@@ -3,7 +3,10 @@
 *:where(:not(html,iframe,canvas,img,svg,video):not(svg*,symbol*)){all:unset;display:revert}*,*::before,*::after{box-sizing:border-box}
 a,button{cursor:revert}
 ol,ul,menu{list-style:none}
-img{max-width:100%}
+/* img{max-width:100%} */
+/* レスポンシブ対応 */
+img{width: 100%;height: auto;}
+
 table{border-collapse:collapse}
 input,textarea{-webkit-user-select:auto}
 textarea{white-space:revert}
