--- a/scss/_config/_font.scss
+++ b/scss/_config/_font.scss
@@ -35,7 +35,7 @@ $basefont: "Noto Sans JP",thin,"ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothi
 // }
 
 @mixin font-size($free) {
-    font-size: $free ;
+    font-size: $free + px;
 }
 
 @mixin font-size-xs($xs:12) {
