--- a/scss/works.scss
+++ b/scss/works.scss
@@ -190,6 +190,12 @@ body{
             }
         }
     }
+    .back_btn{
+        position: fixed ;
+        left: 0px ;
+        bottom:0px;
+        width: 4vw ;
+    }
 }
 ////////////////////
 //archive-works
