--- a/scss/works.scss
+++ b/scss/works.scss
@@ -194,9 +194,10 @@ body{
         position: fixed ;
         left: 0px ;
         bottom:0px;
-        width: 4vw ;
+        width: 50px ;
     }
 }
+
 ////////////////////
 //archive-works
 ////////////////////
