--- a/scss/works.scss
+++ b/scss/works.scss
@@ -202,12 +202,12 @@ body{
 //archive-works
 ////////////////////
 ul.category_works{
-    width: 80vw;
+    // width: 80vw;
     max-width: 1300px;
     display: flex;
-    margin: 0 auto;
+    // margin: 0 auto;
     gap: 1vw;
-    align-items: center;
+    align-items: normal ;
     flex-wrap: wrap;
     justify-content: center;
     li.works_category_list{
