--- a/scss/_function.scss
+++ b/scss/_function.scss
@@ -17,6 +17,7 @@
 @import "_config/font";
 @import "_config/color";
 @import "_config/parts-config";
+@import "_config/animate";
 // @import "_config/layout";
 // @import "_config/animation-act";
 // @import "_config/btn-parts";
