--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,13 @@
 	copyright : nowone
   2024/1/19
 -----------------------------------*/
+.btn {
+  transition: 0.4s;
+}
+.btn:hover {
+  transform: scale(1.1);
+}
+
 body {
   background-color: #2e3133;
   color: #D9D9D9;
