--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,10 @@
+.btn {
+  transition: 0.4s;
+}
+.btn:hover {
+  transform: scale(1.1);
+}
+
 main ul.movie_list {
   display: grid;
   grid-template-columns: 1fr 1fr;
